--- a/style.css
+++ b/style.css
@@ -145,11 +145,11 @@
 @layer components {
   .product-card {
     display: grid;
-    max-width: 350px;
+    max-width: 21.875rem;
 
     @media (min-width: 45rem) {
       grid-template-columns: 1fr 1fr;
-      max-width: 600px;
+      max-width: 37.5rem;
     }
 
     overflow: clip;
